--- a/www/minerva/index.html
+++ b/www/minerva/index.html
@@ -6,6 +6,7 @@
   <title>Terminal de Minerva</title>
   
   <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/static/themes.css">
   <link rel="stylesheet" href="/minerva/style.css">
   <link rel="icon" href="/static/favicon.png" type="image/png" />
 </head>
@@ -76,5 +77,6 @@
     </form>
   </div>
   <script src="/minerva/script.js"></script>
+  <script src="/static/theme-manager.js"></script>
 </body>
 </html>
