--- a/www/eidolon/index.html
+++ b/www/eidolon/index.html
@@ -6,12 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Eidolon Dataslate</title>
   <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/static/themes.css">
   <link rel="icon" href="/static/favicon.png" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap" rel="stylesheet">
   <link href="/eidolon/style.css" rel="stylesheet">
   <script src="/eidolon/script.js" defer></script>
+  <script src="/static/theme-manager.js"></script>
 </head>
 
 <body>
@@ -124,6 +126,7 @@
       <div class="terminal1"></div>
       <div class="center">
         <input type="text" class="terminal-input" placeholder="> Escribe aquí..." />
+        <button class="btn-clear" onclick="limpiarConversacion()" title="Limpiar conversación">🗑️</button>
       </div>
       
     </div>
