--- a/www/hada/index.html
+++ b/www/hada/index.html
@@ -7,6 +7,7 @@
   <title>Hada Terminal</title>
   <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/static/themes.css">
   <link rel="stylesheet" href="/hada/style.css">
   <link rel="icon" href="/static/favicon.png" type="image/png" />
 
@@ -308,6 +309,7 @@ document.addEventListener("DOMContentLoaded", async () => {
 });
 </script>
 
+<script src="/static/theme-manager.js"></script>
 
 </body>
 
