fix: Corregir problema de retenciÃ³n de respuestas de IA
- Mejorar funciÃ³n guardarConversacion para manejar estructuras HTML anidadas
- Implementar bÃºsqueda inteligente de texto en elementos anidados (.ai-msg span, etc.)
- AÃ±adir botÃ³n de limpiar (ðŸ—‘ï¸) en interfaz de Ãnima
- Corregir persistencia en todas las IAs (hada, eidolon, fantasma, anima)
- AÃ±adir estilos CSS para mensajes de usuario y bot diferenciados
- Hacer funciones de limpieza disponibles globalmente
- Fallback robusto para diferentes estructuras de HTML

--- a/www/anima/index.html
+++ b/www/anima/index.html
@@ -133,6 +133,7 @@
             <div class="runic-input-container">
               <input type="text" class="runic-input" placeholder="consulta y pulsa Enter">
               <div class="runic-glow"></div>
+              <button class="btn-clear" onclick="limpiarConversacion()" title="Limpiar conversación">🗑️</button>
             </div>
           </div>
 
