fix: Corregir problemas crÃ­ticos de persistencia y UI
- Corregir problema de retenciÃ³n: guardar DESPUÃ‰S de animaciones completas
- AÃ±adir timeouts para esperar que terminen las animaciones de escritura
- Corregir CSS del botÃ³n limpiar en Ãnima (flex layout)
- Ajustar contenedor runic-input-container para mostrar botÃ³n correctamente
- Cambiar width: 100% a flex: 1 en input de Ãnima
- AÃ±adir gap: 8px para espaciado correcto entre elementos
- Implementar delays especÃ­ficos para cada IA segÃºn su animaciÃ³n

--- a/www/fantasma/index.html
+++ b/www/fantasma/index.html
@@ -265,8 +265,10 @@
 
               output.scrollTop = output.scrollHeight;
               
-              // Guardar conversación después de la respuesta
-              guardarConversacion();
+              // Guardar conversación DESPUÉS de que termine la animación de escritura
+              setTimeout(() => {
+                guardarConversacion();
+              }, (text.length * 5) + 100); // Esperar a que termine la animación + buffer
             } catch (error) {
               escribint.innerText = "⟪ ERROR: No se puede contactar con FANTASMA ⟫";
               console.error("Error enviando a Fantasma:", error);
