fix: Corregir botones de limpiar y expandir sistema de temas
- Hacer funciones limpiarConversacion disponibles globalmente en Fantasma y Eidolon
- Expandir sistema de temas con nuevas variables CSS:
  - --theme-navbar, --theme-navbar-border, --theme-navbar-text
  - --theme-form-bg, --theme-form-border, --theme-form-text
  - --theme-title, --theme-subtitle
- Actualizar tema naranja con todas las nuevas variables
- Preparar sistema para cambio completo de colores en toda la interfaz

--- a/www/fantasma/index.html
+++ b/www/fantasma/index.html
@@ -316,6 +316,9 @@
 
         // Cargar conversación al iniciar
         cargarConversacion();
+        
+        // Hacer funciones disponibles globalmente
+        window.limpiarConversacion = limpiarConversacion;
       });
     </script>
 
