feat: Implementar sistema de consumo inteligente de tokens
- AÃ±adir funciÃ³n detectar_tipo_consulta() para clasificar consultas
- Implementar funciÃ³n analizar_respuesta_para_consumo() para anÃ¡lisis post-respuesta
- Modificar job_responder() para consumo condicional de tokens
- Sistema de compensaciÃ³n automÃ¡tica si respuesta no requiriÃ³ documentaciÃ³n
- Logs detallados de consumo de tokens en consola del navegador
- Patrones de detecciÃ³n para saludos, despedidas, respuestas bÃ¡sicas
- AnÃ¡lisis de palabras clave de lore para determinar consumo
- CompensaciÃ³n automÃ¡tica en caso de errores
- InformaciÃ³n de tokens visible en todas las interfaces (hada, eidolon, fantasma, anima)

Tipos de consulta detectados:
- Saludos: NO consume token
- Despedidas: NO consume token
- Respuestas bÃ¡sicas: NO consume token
- Preguntas bÃ¡sicas: NO consume token
- Consultas de lore: SÃ consume token
- Preguntas con ?: SÃ consume token

--- a/www/fantasma/index.html
+++ b/www/fantasma/index.html
@@ -238,6 +238,12 @@
               const data = await res.json();
               escribint.remove();
 
+              // Mostrar información de consumo de tokens si está disponible
+              if (data?.consumio_token !== undefined) {
+                const tokenInfo = data.consumio_token ? "💰 Token consumido" : "🆓 Gratis";
+                console.log(`${tokenInfo} - Tipo: ${data.tipo_consulta || 'desconocido'} - Razón: ${data.razon || 'N/A'}`);
+              }
+
               const respuestaDiv = document.createElement("div");
               respuestaDiv.classList.add("bot-msg", "glitch");
               respuestaDiv.textContent = ">> ";
