feat: Ocultar pestaÃ±a CONEXIONES del menÃº de navegaciÃ³n
- AÃ±adir style=" display:none

--- a/www/eidolon/index.html
+++ b/www/eidolon/index.html
@@ -19,7 +19,7 @@
 <body>
   <div class="nav-bar">
     <a class="nav-item" id="ficha-link" href="/ficha">FICHA</a>
-    <a class="nav-item" id="conexiones-link">CONEXIONES</a>
+    <a class="nav-item" id="conexiones-link" style="display:none;">CONEXIONES</a>
     <a class="nav-item" id="notas-link" href="/notas">NOTAS</a>
 
     <div id="admin-link-container" style="display:none;">
