--- a/www/ficha/index.html
+++ b/www/ficha/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="nav-bar">
     <a class="nav-item active" id="ficha-link">FICHA</a>
-    <a class="nav-item" id="conexiones-link">CONEXIONES</a>
+    <a class="nav-item" id="conexiones-link" style="display:none;">CONEXIONES</a>
     <a class="nav-item" id="notas-link" href="/notas">NOTAS</a>
   
     <div id="admin-link-container" style="display:none;">
