fix: Ocultar CONEXIONES en pÃ¡ginas de notas y admin
- AÃ±adir style=" display:none

--- a/www/admin/index.html
+++ b/www/admin/index.html
@@ -16,7 +16,7 @@
 
   <div class="nav-bar">
     <a class="nav-item" id="ficha-link" href="/ficha">FICHA</a>
-    <a class="nav-item" id="conexiones-link" href="/conexiones">CONEXIONES</a>
+    <a class="nav-item" id="conexiones-link" href="/conexiones" style="display:none;">CONEXIONES</a>
     <a class="nav-item" id="notas-link" href="/notas">NOTAS</a>
   
     <div id="admin-link-container" style="display:none;">
