--- a/www/notas/index.html
+++ b/www/notas/index.html
@@ -14,7 +14,7 @@
 
     <div class="nav-bar">
         <a class="nav-item" id="ficha-link" href="/ficha">FICHA</a>
-        <a class="nav-item" id="conexiones-link" href="/conexiones">CONEXIONES</a>
+        <a class="nav-item" id="conexiones-link" href="/conexiones" style="display:none;">CONEXIONES</a>
         <a class="nav-item active" id="notas-link" href="/notas">NOTAS</a>
         <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
         <div id="admin-link-container" style="display:none;">
