feat(tokens): Redis como fuente de verdad; panel y API leen/escriben Redis con snapshot a preguntas.json; worker consume desde Redis

--- a/www/admin/index.html
+++ b/www/admin/index.html
@@ -108,6 +108,7 @@
       <h2>Gestión de Personajes</h2>
       <div style="display: flex; gap: 10px; flex-wrap: wrap; margin-bottom: 10px;">
         <button id="ver-personajes">Ver Personajes</button>
+        <button id="actualizar-contadores" title="Recargar contadores desde el servidor (descarta ediciones no guardadas)">Actualizar contadores</button>
         <button id="crear-personaje">Añadir Personaje</button>
       </div>
       <div id="lista-personajes" style="display: none;"></div>
