feat(ui): mostrar IAs con 0 tokens; ocultar solo -2 en todos los menÃºs

--- a/www/fantasma/index.html
+++ b/www/fantasma/index.html
@@ -59,7 +59,7 @@
 
               ias.forEach(ia => {
                 const cantidad = usos[ia];
-                if (cantidad === -1 || (typeof cantidad === "number" && cantidad > 0)) {
+                if (cantidad === -1 || (typeof cantidad === "number" && cantidad >= 0)) {
                   const link = document.createElement("a");
                   link.href = `/${ia}`;
                   link.textContent = ia.charAt(0).toUpperCase() + ia.slice(1);
