feat(ficha): mover selector de color arriba (sticky) para no tapar contenido

--- a/www/ficha/index.html
+++ b/www/ficha/index.html
@@ -103,6 +103,15 @@
   
   <div class="contenedor">
     <div class="scanline"></div>
+    <!-- Selector de colores (movido arriba, fijo) -->
+    <div class="color-selector">
+      <div class="color-option color-red" data-theme="red" title="Tema Rojo"></div>
+      <div class="color-option color-orange" data-theme="orange" title="Tema Naranja"></div>
+      <div class="color-option color-purple" data-theme="purple" title="Tema Púrpura"></div>
+      <div class="color-option color-green" data-theme="green" title="Tema Verde"></div>
+      <div class="color-option color-lightblue" data-theme="lightblue" title="Tema Azul Claro"></div>
+      <div class="color-option color-white" data-theme="white" title="Tema Blanco"></div>
+    </div>
     <div class="titulo-principal" data-id="nombre_personaje" contenteditable="false">NOMBRE DE PERSONAJE</div>
     <div class="subtitulo" data-id="nombre_jugador" contenteditable="false">NOMBRE DEL JUGADOR</div>
 
@@ -164,15 +173,7 @@
     </div>
   </div>
 
-  <!-- Selector de colores -->
-  <div class="color-selector">
-    <div class="color-option color-red" data-theme="red" title="Tema Rojo"></div>
-    <div class="color-option color-orange" data-theme="orange" title="Tema Naranja"></div>
-    <div class="color-option color-purple" data-theme="purple" title="Tema Púrpura"></div>
-    <div class="color-option color-green" data-theme="green" title="Tema Verde"></div>
-    <div class="color-option color-lightblue" data-theme="lightblue" title="Tema Azul Claro"></div>
-    <div class="color-option color-white" data-theme="white" title="Tema Blanco"></div>
-  </div>
+  
 
   <script src="/ficha/script.js"></script>
   <script src="/static/theme-manager.js"></script>
