--- a/www/admin/index.html
+++ b/www/admin/index.html
@@ -119,6 +119,7 @@
       <div style="display: flex; gap: 10px; flex-wrap: wrap; margin-bottom: 10px;">
         <button id="limpiar-cache" style="background: #ff6b35; color: white;">🧹 Limpiar Caché</button>
         <button id="ver-estado-sistema" style="background: #4ecdc4; color: white;">📊 Estado del Sistema</button>
+        <button id="download-logs" style="background: #007bff; color: white;">📦 Descargar Logs</button>
       </div>
       <div id="estado-sistema" style="display: none; background: #1a1a1a; padding: 15px; border-radius: 5px; margin-top: 10px;"></div>
     </section>
