--- a/www/anima/index.html
+++ b/www/anima/index.html
@@ -50,7 +50,7 @@
   <div class="nav-bar">
     <a class="nav-item" id="ficha-link" href="/ficha">FICHA</a>
     <a class="nav-item" id="conexiones-link" href="/conexiones" style="display:none;">CONEXIONES</a>
-    <a class="nav-item" id="notas-link" href="/notas">NOTAS</a>
+    <a class="nav-item" id="poderes-link" href="/poderes">PODERES</a>
 
     <div id="admin-link-container" style="display:none;">
         <a class="nav-item" href="/admin">ADMIN</a>
