--- a/www/conexiones/index.html
+++ b/www/conexiones/index.html
@@ -19,7 +19,7 @@
   <div class="nav-bar">
     <a class="nav-item" id="ficha-link">FICHA</a>
     <a class="nav-item active" id="conexiones-link">CONEXIONES</a>
-    <a class="nav-item" id="notas-link" href="/notas">NOTAS</a>
+    <a class="nav-item" id="poderes-link" href="/poderes">PODERES</a>
 
     <div id="admin-link-container" style="display:none;">
       <a class="nav-item" href="/admin">ADMIN</a>
