--- a/www/ficha/index.html
+++ b/www/ficha/index.html
@@ -17,7 +17,7 @@
   <div class="nav-bar">
     <a class="nav-item active" id="ficha-link">FICHA</a>
     <a class="nav-item" id="conexiones-link" style="display:none;">CONEXIONES</a>
-    <a class="nav-item" id="notas-link" href="/notas">NOTAS</a>
+    <a class="nav-item" id="poderes-link" href="/poderes">PODERES</a>
   
     <div id="admin-link-container" style="display:none;">
       <a class="nav-item" href="/admin">ADMIN</a>
