--- a/www/admin/index.html
+++ b/www/admin/index.html
@@ -30,6 +30,27 @@
       </div>
     </div>
   </div>
+
+  <!-- Modal para editar poderes por personaje (nivel superior) -->
+  <div id="poderes-modal" class="modal" style="display:none;">
+    <div class="modal-content">
+      <h2>Editar Poderes por Personaje</h2>
+
+      <div style="display:flex; gap:8px; margin-bottom:8px; align-items:center;">
+        <select id="lista-usuarios-poderes" style="flex:1;"></select>
+        <input id="nuevo-usuario-poderes" placeholder="Crear nuevo usuario" />
+        <button id="cargar-poderes-usuario">Cargar</button>
+      </div>
+
+      <textarea id="editor-poderes" style="width:100%; height:300px; font-family:monospace;"></textarea>
+
+      <div class="modal-buttons" style="margin-top:8px;">
+        <button id="guardar-poderes">Guardar</button>
+        <button id="eliminar-poderes" style="background:#ff6b35; color:white;">Eliminar Archivo</button>
+        <button id="cerrar-poderes">Cerrar</button>
+      </div>
+    </div>
+  </div>
   
   <script>
     window.addEventListener("DOMContentLoaded", async () => {
@@ -110,7 +131,6 @@
         <button id="ver-personajes">Ver Personajes</button>
         <button id="actualizar-contadores" title="Recargar contadores desde el servidor (descarta ediciones no guardadas)">Actualizar contadores</button>
         <button id="crear-personaje">Añadir Personaje</button>
-        <button id="gestionar-poderes">Gestionar Poderes</button>
       </div>
       <div id="lista-personajes" style="display: none;"></div>
     </section>
@@ -143,26 +163,7 @@
       </div>
     </div>
 
-      <!-- Modal para editar poderes por personaje -->
-      <div id="poderes-modal" class="modal" style="display:none;">
-        <div class="modal-content">
-          <h2>Editar Poderes por Personaje</h2>
-
-          <div style="display:flex; gap:8px; margin-bottom:8px; align-items:center;">
-            <select id="lista-usuarios-poderes" style="flex:1;"></select>
-            <input id="nuevo-usuario-poderes" placeholder="Crear nuevo usuario" />
-            <button id="cargar-poderes-usuario">Cargar</button>
-          </div>
-
-          <textarea id="editor-poderes" style="width:100%; height:300px; font-family:monospace;"></textarea>
-
-          <div class="modal-buttons" style="margin-top:8px;">
-            <button id="guardar-poderes">Guardar</button>
-            <button id="eliminar-poderes" style="background:#ff6b35; color:white;">Eliminar Archivo</button>
-            <button id="cerrar-poderes">Cerrar</button>
-          </div>
-        </div>
-      </div>
+      <!-- poderes-modal moved outside personaje-modal -->
   </div>
 
   <!-- Modal de Log -->
