--- a/www/admin/index.html
+++ b/www/admin/index.html
@@ -16,7 +16,7 @@
 
   <div class="nav-bar">
     <a class="nav-item" id="ficha-link" href="/ficha">FICHA</a>
-    <a class="nav-item" id="conexiones-link" href="/conexiones" style="display:none;">CONEXIONES</a>
+    <a class="nav-item" id="tramas-link" href="/tramas" style="display:none;">TRAMAS</a>
     <a class="nav-item" id="poderes-link" href="/poderes">PODERES</a>
   
     <div id="admin-link-container" style="display:none;">
@@ -36,11 +36,8 @@
     <div class="modal-content">
       <h2>Editar Poderes por Personaje</h2>
 
-      <!-- Usuario actual (rellenado al abrir modal). Selector eliminado; per-personaje carga automática -->
+      <!-- Usuario actual (rellenado al abrir modal). Carga/guardado sobre el personaje seleccionado -->
       <input type="hidden" id="poderes-usuario" />
-      <div style="display:flex; gap:8px; margin-bottom:8px; align-items:center;">
-        <input id="nuevo-usuario-poderes" placeholder="(Opcional) Crear nuevo usuario" style="flex:1;" />
-      </div>
 
       <textarea id="editor-poderes" style="width:100%; height:360px; font-family:monospace;"></textarea>
 
@@ -61,7 +58,7 @@
         const rol = sessionData.rol;
   
         if (id) {
-          document.getElementById("conexiones-link").setAttribute("href", `/conexiones`);
+          document.getElementById("tramas-link").setAttribute("href", `/tramas`);
   
           if (rol === "admin") {
             document.getElementById("admin-link-container").style.display = "inline-block";
@@ -175,12 +172,11 @@
     </div>
   </div>
 
-  <!-- Modal de Conexiones -->
-  <!-- Modal de Conexiones -->
-  <div id="conexiones-modal" class="modal" style="display: none;">
+  <!-- Modal de Tramas (antes: Conexiones) -->
+  <div id="tramas-modal" class="modal" style="display: none;">
     <div class="modal-content-log">
-      <span id="cerrar-modal-conexiones" style="cursor: pointer; float: right;">✖</span>
-      <h2 id="titulo-conexiones" style="margin-top: 0;">Conexiones de [Personaje]</h2>
+      <span id="cerrar-modal-tramas" style="cursor: pointer; float: right;">✖</span>
+      <h2 id="titulo-tramas" style="margin-top: 0;">Tramas de [Personaje]</h2>
 
       <!-- 🚀 AÑADIR NUEVO NODO MANUAL -->
       <div style="margin-bottom: 20px;">
@@ -191,17 +187,17 @@
         <button id="crear-nodo">Crear Nodo</button>
       </div>
 
-      <!-- 🚀 AÑADIR NUEVA CONEXIÓN -->
+      <!-- 🚀 AÑADIR NUEVA TRAMA -->
       <div style="margin-bottom: 20px;">
-        <h3>Añadir nueva conexión</h3>
+        <h3>Añadir nueva trama</h3>
         <select id="source-nodo" style="margin-right: 6px;"></select>
         <select id="target-nodo" style="margin-right: 6px;"></select>
-        <input type="text" id="label-conexion" placeholder="Descripción de la conexión" style="margin-right: 6px;">
-        <button id="añadir-conexion">Añadir Conexión</button>
+        <input type="text" id="label-trama" placeholder="Descripción de la trama" style="margin-right: 6px;">
+        <button id="añadir-trama">Añadir Trama</button>
       </div>
 
-      <!-- 🚀 LISTADO CONEXIONES -->
-      <div id="lista-conexiones" style="max-height: 300px; overflow-y: auto; margin-top: 10px;"></div>
+      <!-- 🚀 LISTADO TRAMAS -->
+      <div id="lista-tramas" style="max-height: 300px; overflow-y: auto; margin-top: 10px;"></div>
 
       <h3 style="margin-top: 20px;">Nodos Existentes</h3>
       <div id="lista-nodos" style="max-height: 200px; overflow-y: auto; margin-top: 10px;"></div>
@@ -210,7 +206,7 @@
 
       <!-- 🚀 BOTÓN GUARDAR -->
       <div style="margin-top: 20px; text-align: center;">
-        <button id="guardar-conexiones">Guardar Cambios</button>
+        <button id="guardar-tramas">Guardar Cambios</button>
       </div>
     </div>
     <div id="cy-mini"
