--- a/www/anima/index.html
+++ b/www/anima/index.html
@@ -49,7 +49,7 @@
 
   <div class="nav-bar">
     <a class="nav-item" id="ficha-link" href="/ficha">FICHA</a>
-    <a class="nav-item" id="conexiones-link" href="/conexiones" style="display:none;">CONEXIONES</a>
+    <a class="nav-item" id="tramas-link" href="/tramas" style="display:none;">TRAMAS</a>
     <a class="nav-item" id="poderes-link" href="/poderes">PODERES</a>
 
     <div id="admin-link-container" style="display:none;">
@@ -73,7 +73,7 @@
             const rol = sessionData.rol;
 
             if (id) {
-                document.getElementById("conexiones-link").setAttribute("href", `/conexiones`);
+                document.getElementById("tramas-link").setAttribute("href", `/tramas`);
 
                 if (rol === "admin") {
                     document.getElementById("admin-link-container").style.display = "inline-block";
