--- a/www/fantasma/index.html
+++ b/www/fantasma/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="nav-bar">
       <a class="nav-item" id="ficha-link" href="/ficha">FICHA</a>
-      <a class="nav-item" id="conexiones-link" style="display:none;">CONEXIONES</a>
+      <a class="nav-item" id="tramas-link" style="display:none;">TRAMAS</a>
       <a class="nav-item" id="poderes-link" href="/poderes">PODERES</a>
 
       <div id="admin-link-container" style="display:none;">
@@ -42,7 +42,7 @@
           const rol = sessionData.rol;
 
           if (id) {
-            document.getElementById("conexiones-link").setAttribute("href", `/conexiones`);
+            document.getElementById("tramas-link").setAttribute("href", `/tramas`);
 
             // Mostrar Admin si es rol admin
             if (rol === "admin") {
@@ -134,7 +134,7 @@
           };
 
           setHref("ficha-link");
-          setHref("conexiones-link");
+          setHref("tramas-link");
           setHref("hada-link");
           setHref("eidolon-link");
           setHref("fantasma-link");
