--- a/www/anima/index.html
+++ b/www/anima/index.html
@@ -49,7 +49,7 @@
 
   <div class="nav-bar">
     <a class="nav-item" id="ficha-link" href="/ficha">FICHA</a>
-    <a class="nav-item" id="tramas-link" href="/tramas" style="display:none;">TRAMAS</a>
+    <a class="nav-item" id="tramas-link" href="/tramas">TRAMAS</a>
     <a class="nav-item" id="poderes-link" href="/poderes">PODERES</a>
 
     <div id="admin-link-container" style="display:none;">
