--- a/www/poderes/index.html
+++ b/www/poderes/index.html
@@ -14,7 +14,7 @@
 
     <div class="nav-bar">
         <a class="nav-item" id="ficha-link" href="/ficha">FICHA</a>
-        <a class="nav-item" id="tramas-link" href="/tramas" style="display:none;">TRAMAS</a>
+        <a class="nav-item" id="tramas-link" href="/tramas">TRAMAS</a>
         <a class="nav-item active" id="poderes-link" href="/poderes">PODERES</a>
         <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
         <div id="admin-link-container" style="display:none;">
