AÃ±adir selector de Naturaleza (Caballo/Torre/Alfil) y ajustar slots de rotura dinÃ¡micamente. Cambiar activaciÃ³n de indicadores a doble click

--- a/www/admin/index.html
+++ b/www/admin/index.html
@@ -233,7 +233,12 @@
       <div class="bloque titulo-seccion">Eidos</div>
       <div class="bloque fila-eidos">
         <div class="campo"><label>Cábala</label><input type="text" data-id="cabala"></div>
-        <div class="campo"><label>Naturaleza</label><input type="text" data-id="naturaleza"></div>
+        <div class="campo"><label>Naturaleza</label><select id="naturaleza-select" data-id="naturaleza">
+          <option value="">-- Seleccionar --</option>
+          <option value="Caballo">Caballo</option>
+          <option value="Torre">Torre</option>
+          <option value="Alfil">Alfil</option>
+        </select></div>
         <div class="campo"><label>Senda</label><input type="text" data-id="senda"></div>
         <div class="campo"><label>Arquetipo</label><input type="text" data-id="arquetipo"></div>
       </div>
