--- a/www/ficha/index.html
+++ b/www/ficha/index.html
@@ -151,10 +151,8 @@
     </div>
 
     <div class="subseccion">Rotura</div>
-    <div class="bloque bloque-3 indicador-toggle" data-id="rotura">
-      <div class="item" data-index="0"></div>
-      <div class="item" data-index="1"></div>
-      <div class="item" data-index="2"></div>
+    <div class="bloque bloque-3 indicador-toggle" data-id="rotura" id="bloque-rotura">
+      <!-- Los slots se generan dinámicamente según la naturaleza -->
     </div>
     <div class="separador"><span>Chimera</span></div>
 
