Ocultar pestaÃ±a Tramas en la navegaciÃ³n de todas las pÃ¡ginas

--- a/www/hada/index.html
+++ b/www/hada/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="nav-bar">
       <a class="nav-item" id="ficha-link" href="/ficha">FICHA</a>
-      <a class="nav-item" id="tramas-link">TRAMAS</a>
+      <a class="nav-item" id="tramas-link" style="display:none;">TRAMAS</a>
       <a class="nav-item" id="poderes-link" href="/poderes">PODERES</a>
     
       <div id="admin-link-container" style="display:none;">
