--- a/www/tramas/index.html
+++ b/www/tramas/index.html
@@ -15,7 +15,7 @@
 
     <div class="nav-bar">
         <a class="nav-item" id="ficha-link" href="/ficha">FICHA</a>
-        <a class="nav-item active" id="tramas-link" href="/tramas">TRAMAS</a>
+        <a class="nav-item active" id="tramas-link" href="/tramas" style="display:none;">TRAMAS</a>
         <a class="nav-item" id="poderes-link" href="/poderes">PODERES</a>
         <div id="admin-link-container" style="display:none;">
             <a class="nav-item" href="/admin">ADMIN</a>
