--- a/www/ficha/index.html
+++ b/www/ficha/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="nav-bar">
     <a class="nav-item active" id="ficha-link">FICHA</a>
-    <a class="nav-item" id="tramas-link">TRAMAS</a>
+    <a class="nav-item" id="tramas-link" style="display:none;">TRAMAS</a>
     <a class="nav-item" id="poderes-link" href="/poderes">PODERES</a>
   
     <div id="admin-link-container" style="display:none;">
